@@ -100,6 +100,7 @@ Changes
   * get_writer_for() returns NullWriter when filename=None instead of
     raising TypeError and filename is now a required arg instead of kwarg
   * moved coordinates.base.ChainReader to coordinates.chain.ChainReader
+  * renamed private method ChainReader.get_flname() to ChainReader._get_filename()
 
 Deprecations (Issue #599)
   * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
